# candle-electra

./: Cargo.toml  README.md
examples/viet/: Cargo.toml
examples/viet/src/: main.rs
src/: config.rs  embeddings.rs  encoder.rs  lib.rs
src/encoder/: layer.rs
src/encoder/layer/: attention.rs  intermediate.rs  output.rs
src/encoder/layer/attention/: self_attention.rs  self_output.rs
