[package]
name = "candle-electra"
description = "Candle port of ELECTRA"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true

[workspace]
members = [
    "examples/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nicksenger/candle-electra"

[workspace.dependencies]
candle-core = "0.3"
candle-nn = "0.3"
serde = "1.0"
